force-app/main/default/objects/EYI_CP_Account__c/EYI_CP_Account__c.object-meta.xml
<CustomObject>
    <label>CP Account</label>
    <nameField>
        <displayFormat>PRCP-{000000}</displayFormat>
        <label>Channel Partner Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CP Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>