force-app/main/default/objects/EYI_CP_Account__c/fields/EYI_Channel_Partner_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Channel_Partner_Account_Name__c</fullName>
    <formula>EYI_Referral_Customer_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Partner Account Name</label>
    <type>Text</type>
</CustomField>