force-app/main/default/objects/EYI_CP_Account__c/fields/EYI_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Mobile_Number__c</fullName>
    <formula>EYI_Referral_Customer_Name__r.EYI_Mobile_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Number</label>
    <type>Text</type>
</CustomField>