force-app/main/default/objects/EYI_CP_Account__c/fields/EYI_Referral_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Referral_Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CP Accounts</relationshipLabel>
    <relationshipName>CP_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>