force-app/main/default/objects/EYI_CP_Account__c/listViews/newGroup_EYI_CP_Account.listView-meta.xml
<ListView>
    <fullName>newGroup_EYI_CP_Account</fullName>
    <filterScope>Queue</filterScope>
    <label>newGroup</label>
    <queue>newGroup</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>